# Yocto-Learning

./: CMakeLists.txt  README.md  animal.cpp  animal.h  dog.cpp  dog.hpp  main.cpp
